# AlbertCode

./: .albert-code.toml.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
albert_code/: __init__.py  agent.py  api.py  cli.py  config.py  context.py  display.py  git_autocommit.py  project_config.py  prompts.py  skills.py  snapshots.py
albert_code/memory/: __init__.py  embeddings.py  palace.py
albert_code/tools/: __init__.py  base.py  bash.py  files.py  git.py  search.py
tests/: test_agent.py  test_api.py  test_cli_commands.py  test_cli_ui.py  test_embeddings.py  test_palace.py  test_skills.py  test_tools.py
